fix: correct vertical alignment with new Helvetica

--- a/assets/css/dup/header.scss
+++ b/assets/css/dup/header.scss
@@ -24,7 +24,7 @@
 }
 
 .header__time {
-  font-family: Helvetica, sans-serif;
+  font-family: Inter, sans-serif;
   font-size: 96px;
   position: absolute;
   top: 66px;
@@ -54,6 +54,7 @@
   font-family: Helvetica, sans-serif;
   font-weight: 700;
   font-size: 144px;
+  transform: translateY(12px);
 }
 
 .header__environment {
